<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content"
	android:layout_height="match_parent"
	android:orientation="vertical" >

	<TextView
		android:id="@+id/wind_speed_x_text_view"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textColor="#ffffff"
		android:text="@string/wind_speed_x" />

	<TextView
		android:id="@+id/wind_speed_y_text_view"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textColor="#ffffff"
		android:text="@string/wind_speed_y" />

	<TextView
		android:id="@+id/speed_x_text_view"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textColor="#ffffff"
		android:text="@string/speed_x" />

	<TextView
		android:id="@+id/speed_y_text_view"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textColor="#ffffff"
		android:text="@string/speed_y" />

	<TextView
		android:id="@+id/x_text_view"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textColor="#ffffff"
		android:text="@string/x" />

	<TextView
		android:id="@+id/y_text_view"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textColor="#ffffff"
		android:text="@string/y" />

	<TextView
		android:id="@+id/time_text_view"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textColor="#ffffff"
		android:text="@string/time" />

</LinearLayout>